--- a/build.gradle
+++ b/build.gradle
@@ -24,20 +24,31 @@ subprojects {
     }
 
     dependencies {
-        compile 'org.springframework:spring-webmvc:4.3.6.RELEASE'
-        compile group: 'org.springframework', name: 'spring-context', version: '4.3.6.RELEASE'
 
+        compile group: 'org.springframework', name: 'spring-context', version: '4.3.6.RELEASE'
+        compile group: 'org.springframework', name: 'spring-core', version: '4.3.6.RELEASE'
+        compile group: 'org.springframework', name: 'spring-context-support', version: '4.3.6.RELEASE'
         testCompile group: 'junit', name: 'junit', version: '4.12'
+        compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+        compile "ch.qos.logback:logback-classic:1.1.7"
+        compileOnly 'org.projectlombok:lombok:1.18.6'
+        annotationProcessor 'org.projectlombok:lombok:1.18.6'
     }
 }
 project(':api') {
     dependencies {
-        compile project(':api')
+        compile project(':common')
     }
 }
 
 project(':common') {
     dependencies {
-        compile project(':common')
+
+    }
+}
+
+project(':front') {
+    dependencies {
+
     }
 }
