--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,17 +1,3 @@
-buildscript {
-    repositories { mavenCentral() }
-}
-plugins { id "io.spring.dependency-management" version "1.0.5.RELEASE" }
-sourceCompatibility = 1.8
-
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'idea'
-
-sourceCompatibility = 1.8
-
-repositories { mavenCentral() }
 dependencies {
-    compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.6.RELEASE'
+    compile group: 'org.springframework.data', name: 'spring-data-mongodb', version: '1.10.15.RELEASE'
 }
