1. Spring 4, Hibernate + Spring data JPA 테스트

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,12 +1,8 @@
-buildscript {
-    repositories { mavenCentral() }
-}
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'idea'
-
 dependencies {
     compile project(':common')
     compile 'org.springframework:spring-webmvc:4.3.6.RELEASE'
     providedCompile 'javax.servlet:javax.servlet-api:3.0.1'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.8'
+
 }
