--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,3 +1,11 @@
 dependencies {
     compile group: 'org.springframework.data', name: 'spring-data-mongodb', version: '1.10.15.RELEASE'
+    compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '1.10.5.RELEASE'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
+
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.1.15.Final'
+    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.1.15.Final'
+
+    compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
+
 }
