--- a/api/build.gradle
+++ b/api/build.gradle
@@ -3,6 +3,7 @@ dependencies {
     compile 'org.springframework:spring-webmvc:4.3.6.RELEASE'
     providedCompile 'javax.servlet:javax.servlet-api:3.0.1'
 
+    // Json 응답을 위해 선언
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.8'
 }
