--- a/front/build.gradle
+++ b/front/build.gradle
@@ -3,4 +3,7 @@ dependencies {
     providedCompile 'javax.servlet:javax.servlet-api:3.0.1'
     compile group: 'javax.servlet', name: 'jstl', version: '1.2'
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
+
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+
 }
